# practice-chat-app-vue-django

./: README.md  docker-compose.yml
ChatApp.Api/: pyproject.toml
ChatApp.Api/ChatApp/: models.py  settings.py  urls.py  views.py
ChatApp.Api/ChatApp/migrations/: 0001_initial.py
ChatApp.Api/ChatAppProject/: settings.py  urls.py
ChatApp.Api/api/: urls.py  views.py
ChatApp.Api/api/migrations/: 0001_initial.py
ChatApp.Site/: package-lock.json  package.json
ChatApp.Site/src/: App.vue
ChatApp.Site/src/components/: Message.vue
