[tool.poetry]
name = "chatapp.api"
version = "0.0.0"
description = "Simple chat app backend"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
